--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.0.0-alpha2",
     "bootstrap-icons": "^1.0.0",
+    "cloudinary-core": "^2.11.3",
     "cloudinary-react": "^1.7.0",
     "react": "^16.13.1",
     "react-countdown": "^2.2.1",
