--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.6"
+    "redux-form": "^8.3.6",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
